--- a/index.html
+++ b/index.html
@@ -5,32 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Oleo+Script&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link href="./style.css" rel="stylesheet">
 </head>
 <body>
     <!--Шапка сайта-->
-    <header>
+    <header class="header">
         <nav>
-            <a href="">WebStudio</a>
+            <a class="logo" href="">Web<span>Studio</span></a>
             <ul>
-                <li> <a href="">Студия</a></li>
-                <li> <a href="">Портфолио</a></li>
-                <li> <a href="">Контакты</a></li>
+                <li> <a href="" class="list current">Студия</a></li>
+                <li> <a href="" class="list">Портфолио</a></li>
+                <li> <a href="" class="list">Контакты</a></li>
             </ul>
         </nav>
         <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <li><a href="mailto:info@devstudio.com" class="list">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111" class="list">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
         <!--LДевиз и заказ услуги-->    
         <section>
-            <h1>Эффективные решения для вашего бизнеса</h1>
+            <h1>Эффективные решения <br/> для вашего бизнеса</h1>
             <button name="button">Заказать услугу</button>
         </section>
         <!--Приоритеты в работе-->
-        <section>
-            <!--<h2></h2>  заголовок секции на будущее-->
+        <section class="section">
+            <!--<h2 class="section-stitle"></h2>  заголовок секции на будущее-->
             <ul>
                 <li>
                     <h3>Внимание к деталям</h3>
@@ -68,7 +72,7 @@
             </ul>
         </section>
         <!--Наша команда-->
-        <section>
+        <section class="team">
             <h2>Наша команда</h2>
             <ul>
                 <li><img src="./images/photo1.jpg" alt="Фото Игорь Демьяненко" width="270">
@@ -94,13 +98,16 @@
         </section>
     </main>
     <!--Футер-->
-    <footer>
-        <a href="WebStudio">WebStudio</a>
+    <footer class="footer">
+        <a class="logo logof" href="./index.html">Web<span>Studio</span></a>
         <address>
             <ul>
-                <li><a href="https://goo.gl/maps/PEtUD6FRup9HMeJw8">г. Киев, пр-т Леси Украинки, 26</a></li>
-                <li><a href="mailto:info@example.com">info@example.com</a></li>
-                <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+                <li><a href="https://goo.gl/maps/PEtUD6FRup9HMeJw8" class="link
+                    ">г. Киев, пр-т Леси Украинки, 26</a></li>
+                <li><a href="mailto:info@example.com" class="link
+                    ">info@example.com</a></li>
+                <li><a href="tel:+380991111111" class="link
+                    ">+38 099 111 11 11</a></li>
             </ul>
         </address>
     </footer>
