Сделал страницу 2 и CSS правила к ней

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
             <a class="logo" href="">Web<span>Studio</span></a>
             <ul>
                 <li> <a href="" class="list current">Студия</a></li>
-                <li> <a href="" class="list">Портфолио</a></li>
+                <li> <a href="./Portfolio.html" class="list">Портфолио</a></li>
                 <li> <a href="" class="list">Контакты</a></li>
             </ul>
         </nav>
         <ul>
-            <li><a href="mailto:info@devstudio.com" class="list">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" class="list">+38 096 111 11 11</a></li>
+            <li><a href="mailto:info@devstudio.com" target="_blank" class="list">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111" target="_blank" class="list">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
@@ -104,9 +104,9 @@
             <ul>
                 <li><a href="https://goo.gl/maps/PEtUD6FRup9HMeJw8" class="link
                     ">г. Киев, пр-т Леси Украинки, 26</a></li>
-                <li><a href="mailto:info@example.com" class="link
+                <li><a href="mailto:info@example.com" target="_blank" class="link
                     ">info@example.com</a></li>
-                <li><a href="tel:+380991111111" class="link
+                <li><a href="tel:+380991111111" target="_blank" class="link
                     ">+38 099 111 11 11</a></li>
             </ul>
         </address>
