Внес правки по ссилках

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <!--Шапка сайта-->
     <header class="header">
         <nav>
-            <a class="logo" href="">Web<span>Studio</span></a>
+            <a class="logo" href="./index.html">Web<span>Studio</span></a>
             <ul>
                 <li> <a href="" class="list current">Студия</a></li>
-                <li> <a href="./Portfolio.html" class="list">Портфолио</a></li>
+                <li> <a href="./portfolio.html" class="list">Портфолио</a></li>
                 <li> <a href="" class="list">Контакты</a></li>
             </ul>
         </nav>
