--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             </ul>
         </nav>
         <ul>
-            <li><a href="mailto:info@devstudio.com" target="_blank" class="list">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" target="_blank" class="list">+38 096 111 11 11</a></li>
+            <li><a href="mailto:info@devstudio.com" target="_blank" class="list mailh">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111" target="_blank" class="list telh">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
@@ -72,7 +72,7 @@
             </ul>
         </section>
         <!--Наша команда-->
-        <section class="team">
+        <section class="section-team">
             <h2>Наша команда</h2>
             <ul>
                 <li><img src="./images/photo1.jpg" alt="Фото Игорь Демьяненко" width="270">
@@ -102,11 +102,11 @@
         <a class="logo logof" href="./index.html">Web<span>Studio</span></a>
         <address>
             <ul>
-                <li><a href="https://goo.gl/maps/PEtUD6FRup9HMeJw8" class="link
+                <li><a href="https://goo.gl/maps/PEtUD6FRup9HMeJw8" class="link city
                     ">г. Киев, пр-т Леси Украинки, 26</a></li>
-                <li><a href="mailto:info@example.com" target="_blank" class="link
+                <li><a href="mailto:info@example.com" target="_blank" class="link mail
                     ">info@example.com</a></li>
-                <li><a href="tel:+380991111111" target="_blank" class="link
+                <li><a href="tel:+380991111111" target="_blank" class="link tel
                     ">+38 099 111 11 11</a></li>
             </ul>
         </address>
