--- a/portfolio.html
+++ b/portfolio.html
@@ -22,104 +22,106 @@
             </ul>
         </nav>
         <ul>
-            <li><a href="mailto:info@devstudio.com" target="_blank" class="list">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" target="_blank" class="list">+38 096 111 11 11</a></li>
+            <li><a href="mailto:info@devstudio.com" target="_blank" class="list mailh">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111" target="_blank" class="list telh">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
         <!-- <h1Портфолио></h1>-->
-        <ul class="buttons">
-            <li><button type="button">Все</button></li>
-            <li><button type="button">Веб-сайты</button></li>
-            <li><button type="button">Приложения</button></li>
-            <li><button type="button">Дизайн</button></li>
-            <li><button type="button">Маркетинг</button></li>
-        </ul> 
-        <ul class="cards">
-            <li>
-                <a href="">
-                    <img src="./images/portfolio1.jpg" alt="Три фото на ноутбуке" width="370"> 
-                    <h2>Технокряк</h2>
-                    <p>Веб-сайт</p>
-                    <p>Текст для описания работи сайта</p>
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <img src="./images/portfolio2.jpg" alt="Баскетболисти" width="370">
-                    <h2>Постер New Orlean vs Golden Star</h2>
-                    <p>Дизайн</p>
-                    <p>Текст для описания работи сайта</p>
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <img src="./images/portfolio3.jpg" alt="Логотип ресторана" width="370">
-                    <h2>Ресторан Seafood</h2>
-                    <p>Приложение</p>
-                    <p>Текст для описания работи сайта</p>
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <img src="./images/portfolio4.jpg" alt="Наушники" width="370">
-                    <h2>Проект Prime</h2>
-                    <p>Маркетинг</p>
-                    <p>Текст для описания работи сайта</p>
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <img src="./images/portfolio5.jpg" alt="Коробочки" width="370">
-                    <h2>Проект Boxes</h2>
-                    <p>Приложение</p>
-                    <p>Текст для описания работи сайта</p>
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <img src="./images/portfolio6.jpg" alt="Монитор" width="370">
-                    <h2>Inspiration has no Borders</h2>
-                    <p>Веб-сайт</p>
-                    <p>Текст для описания работи сайта</p>
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <img src="./images/portfolio7.jpg" alt="Книга" width="370">
-                    <h2>Издание Limited Edition</h2>
-                    <p>Дизайн</p>
-                    <p>Текст для описания работи сайта</p>
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <img src="./images/portfolio8.jpg" alt="Ценник" width="370">
-                    <h2>Проект LAB</h2>
-                    <p>Маркетинг</p>
-                    <p>Текст для описания работи сайта</p>
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <img src="./images/portfolio9.jpg" alt="Ноутбук" width="370">
-                    <h2>Growing Business</h2>
-                    <p>Приложение</p>
-                    <p>Текст для описания работи сайта</p>
-                </a>
-            </li>
-        </ul>
+        <section>
+            <ul class="buttons">
+                <li><button type="button">Все</button></li>
+                <li><button type="button">Веб-сайты</button></li>
+                <li><button type="button">Приложения</button></li>
+                <li><button type="button">Дизайн</button></li>
+                <li><button type="button">Маркетинг</button></li>
+            </ul> 
+            <ul class="cards">
+                <li>
+                    <a href="">
+                        <img src="./images/portfolio1.jpg" alt="Три фото на ноутбуке" width="370"> 
+                        <h2>Технокряк</h2>
+                        <p>Веб-сайт</p>
+                        <p>Текст для описания работи сайта</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./images/portfolio2.jpg" alt="Баскетболисти" width="370">
+                        <h2>Постер New Orlean vs Golden Star</h2>
+                        <p>Дизайн</p>
+                        <p>Текст для описания работи сайта</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./images/portfolio3.jpg" alt="Логотип ресторана" width="370">
+                        <h2>Ресторан Seafood</h2>
+                        <p>Приложение</p>
+                        <p>Текст для описания работи сайта</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./images/portfolio4.jpg" alt="Наушники" width="370">
+                        <h2>Проект Prime</h2>
+                        <p>Маркетинг</p>
+                        <p>Текст для описания работи сайта</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./images/portfolio5.jpg" alt="Коробочки" width="370">
+                        <h2>Проект Boxes</h2>
+                        <p>Приложение</p>
+                        <p>Текст для описания работи сайта</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./images/portfolio6.jpg" alt="Монитор" width="370">
+                        <h2>Inspiration has no Borders</h2>
+                        <p>Веб-сайт</p>
+                        <p>Текст для описания работи сайта</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./images/portfolio7.jpg" alt="Книга" width="370">
+                        <h2>Издание Limited Edition</h2>
+                        <p>Дизайн</p>
+                        <p>Текст для описания работи сайта</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./images/portfolio8.jpg" alt="Ценник" width="370">
+                        <h2>Проект LAB</h2>
+                        <p>Маркетинг</p>
+                        <p>Текст для описания работи сайта</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./images/portfolio9.jpg" alt="Ноутбук" width="370">
+                        <h2>Growing Business</h2>
+                        <p>Приложение</p>
+                        <p>Текст для описания работи сайта</p>
+                    </a>
+                </li>
+            </ul>
+        </section>
     </main>
     <!--Футер-->
     <footer class="footer">
         <a class="logo logof" href="./index.html">Web<span>Studio</span></a>
         <address>
             <ul>
-                <li><a href="https://goo.gl/maps/PEtUD6FRup9HMeJw8" class="link
+                <li><a href="https://goo.gl/maps/PEtUD6FRup9HMeJw8" class="link city
                     ">г. Киев, пр-т Леси Украинки, 26</a></li>
-                <li><a href="mailto:info@example.com" target="_blank" class="link
+                <li><a href="mailto:info@example.com" target="_blank" class="link mail
                     ">info@example.com</a></li>
-                <li><a href="tel:+380991111111" target="_blank" class="link
+                <li><a href="tel:+380991111111" target="_blank" class="link tel
                     ">+38 099 111 11 11</a></li>
             </ul>
         </address>
