--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Oleo+Script&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oleo+Script&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link href="./style.css" rel="stylesheet">
 </head>
 <body>
@@ -30,7 +30,7 @@
         <!--LДевиз и заказ услуги-->    
         <section>
             <h1>Эффективные решения <br/> для вашего бизнеса</h1>
-            <button name="button">Заказать услугу</button>
+            <button type="button">Заказать услугу</button>
         </section>
         <!--Приоритеты в работе-->
         <section class="section">
